[tool.poetry]
name = "nashenasbot"
version = "0.1.0"
description = "A minimal aiogram-based Telegram bot with Postgres and Redis"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
aiogram = {version = ">=3.3,<4.0", extras = ["fast"]}
uvicorn = ">=0.23,<0.32"
pymysql = ">=1.1,<2.0"
redis = ">=5.0,<6.0"
python-dotenv = ">=1.0,<2.0"
cryptography = ">=42.0,<43.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

